--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ header li {
     padding: 15px;
 }
 
-header li a {
+header li a, header li a:link {
     padding: 15px;
     text-decoration: none;
+    color: black;
 }
 
 header li:hover {
@@ -151,7 +152,7 @@ main .review .stars i {
 
 footer {
     width: 100%;
-    height: 270px;
+    height: 300px;
     background-color: #1E591E;
     padding: 30px 50px 20px 50px;
     box-sizing: border-box;
@@ -317,3 +318,21 @@ main .offer-page .gen2 {
 main .offer-page {
     margin: 80px 10px;
 }
+
+main .offer-question {
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5f5;
+    padding: 30px;
+    align-items: center;
+}
+
+main .offer-question p {
+    font-weight: bold;
+}
+
+main .offer-question input {
+    max-width: 300px;
+    margin-bottom: 10px;
+}
+
