--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ main .offer {
 
 main .offer1 {
     background-image: url(images/photo-1591586116988-62fe65164f8d.png);
-    b
+
 }
 
 main .offer2 {
@@ -194,3 +194,181 @@ footer .authors a:hover {
     color: white;
 }
 
+/* Newsletter CSS - Ryan */
+
+#h2-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#news-h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #1E591E;
+    height: 50px;
+    width: 100vw;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px;
+    color: #f5f5f5;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: larger;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #a0e37c;
+}
+
+#form-container {
+    display: flex;
+    flex-direction: column;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #1E591E;
+    margin: 10px;
+    padding: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #e6e4e4;
+}
+
+#form-container a {
+    justify-self: center;
+    align-self: center;
+}
+
+.label {
+    font-size: larger;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.input {
+    font-size: medium;
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+#news-choice {
+    font-size: larger;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#form p {
+    font-size: small;
+    color: grey;
+}
+
+#form-submit {
+    width: 120px;
+    height: 40px;
+    margin-top: 30px;
+    font-size: larger;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+#form-submit:hover:enabled {
+    background-color: #1E591E;
+    color: #f5f5f5;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #f5f5f5;
+}
+/* Quiz CSS - Ryan */
+
+#container {
+    display: flex;
+    flex-direction: column;
+}
+
+#quiz-heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #1E591E;
+    height: 50px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px;
+    color: #f5f5f5;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: larger;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #a0e37c;
+    border-radius: 10px;
+}
+
+#quiz-container {
+    margin: 10px;
+    padding: 10px;
+    background-color: #e6e4e4;
+    border-style: dotted;
+    border-width: 3px;
+    border-color: #1E591E;
+    border-radius: 10px;
+}
+
+#question1,
+#question2,
+#question3,
+#question4 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: larger;
+}
+
+#options1,
+#options2,
+#options3,
+#options4 {
+    padding: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #000000;
+    border-radius: 10px;
+}
+
+#options1{
+    background-color: #bae8ba; 
+}
+
+#options2{
+    background-color: #bae8ba;
+}
+
+#options3{
+    background-color: #bae8ba;
+}
+
+#options4{
+    background-color: #bae8ba;
+}
+
+input {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#submit-button {
+    width: 120px;
+    height: 40px;
+    margin-top: 30px;
+    font-size: larger;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+#submit-button:hover {
+    background-color: #1E591E;
+    color: #f5f5f5;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #f5f5f5;
+}
