--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Tektur&display=swap');
+
 body, ul, h1, h2, h3, h4, h5, h6 {
     padding: 0;
     margin: 0;
@@ -298,11 +300,11 @@ footer .authors a:hover {
     margin-right: 10px;
     padding: 5px;
     color: #f5f5f5;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Comfortaa', cursive;
     font-size: larger;
     border-style: solid;
     border-width: 3px;
-    border-color: #a0e37c;
+    border-color: #95c07f;
     border-radius: 10px;
 }
 
@@ -320,8 +322,9 @@ footer .authors a:hover {
 #question2,
 #question3,
 #question4 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Comfortaa', cursive;
     font-size: larger;
+    font-weight: 1000;
 }
 
 #options1,
@@ -329,7 +332,8 @@ footer .authors a:hover {
 #options3,
 #options4 {
     padding: 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Comfortaa', cursive;
+    font-size: 18px;
     background-color: #97bd82;
     border-style: solid;
     border-width: 3px;
@@ -337,17 +341,16 @@ footer .authors a:hover {
     border-radius: 10px;
 }
 
-input {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
 #submit-button {
     width: 120px;
     height: 40px;
     margin-top: 30px;
+    font-family: 'Comfortaa', cursive;
     font-size: larger;
+    font-weight: 1000;
     margin-bottom: 20px;
     margin-left: 20px;
+    border-radius: 10px;
 }
 
 #submit-button:hover {
@@ -355,5 +358,5 @@ input {
     color: #f5f5f5;
     border-style: solid;
     border-width: 3px;
-    border-color: #f5f5f5;
+    border-color: #000000;
 }
