--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Tektur&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
+
 body, ul, h1, h2, h3, h4, h5, h6 {
     padding: 0;
     margin: 0;
@@ -218,7 +220,7 @@ footer .authors a:hover {
     margin-right: 10px;
     padding: 5px;
     color: #f5f5f5;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Montserrat Alternates', sans-serif;
     font-size: larger;
     border-style: solid;
     border-width: 3px;
@@ -233,7 +235,7 @@ footer .authors a:hover {
     border-color: #1E591E;
     margin: 10px;
     padding: 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Montserrat Alternates', sans-serif;
     background-color: #e6e4e4;
 }
 
@@ -243,7 +245,8 @@ footer .authors a:hover {
 }
 
 .label {
-    font-size: larger;
+    font-size: x-large;
+    font-weight: 1000;
     display: inline-block;
     margin-top: 20px;
 }
@@ -262,16 +265,20 @@ footer .authors a:hover {
 
 #form p {
     font-size: small;
-    color: grey;
+    color: rgb(147, 144, 144);
+    font-weight: 1000;
 }
 
 #form-submit {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 1000;
     width: 120px;
     height: 40px;
     margin-top: 30px;
     font-size: larger;
     margin-bottom: 20px;
     margin-left: 20px;
+    border-radius: 5px;
 }
 
 #form-submit:hover:enabled {
@@ -279,7 +286,7 @@ footer .authors a:hover {
     color: #f5f5f5;
     border-style: solid;
     border-width: 3px;
-    border-color: #f5f5f5;
+    border-color: #000000;
 }
 /* Quiz CSS - Ryan */
 
