--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-
-/*landing page style*/
+/* Aneta's CSS */
+/* Landing page style */
 
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Tektur&display=swap');
 
@@ -10,6 +10,11 @@ body, ul, h1, h2, h3, h4, h5, h6 {
     padding: 0;
     margin: 0;
 }
+
+.ham-menu {
+    display: none;
+}
+
 
 * {
     font-family: 'Slabo 27px', serif;
@@ -85,6 +90,7 @@ main .offer {
     display: flex;
     justify-content: center;
     background-color: whitesmoke;
+    flex-wrap: wrap;
 }
 
 main .offer1 {
@@ -127,7 +133,7 @@ main .reviews {
 
 main .reviews .review {
     background-color: #1E591E;
-    width: 600px;
+    max-width: 600px;
     padding: 30px;
     margin: auto;
     box-sizing: content-box;
@@ -159,7 +165,6 @@ main .review .stars i {
 
 footer {
     width: 100%;
-    height: 300px;
     background-color: #1E591E;
     padding: 30px 50px 20px 50px;
     box-sizing: border-box;
@@ -209,7 +214,7 @@ footer .authors a:hover {
     color: white;
 }
 
-/*offer page style*/
+/* Offer page style */
 
 main .offer-info {
     text-align: center;
@@ -235,6 +240,7 @@ main .offer-info p a:hover {
 main .offer-veg {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 
 }
 
@@ -287,6 +293,7 @@ main .offer-page .offer-card2 p {
 main .offer-page .offer-fru {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 main .offer-page .fru1 {
@@ -343,7 +350,54 @@ main .offer-question input {
     margin-bottom: 10px;
 }
 
-=======
+
+@media (max-width: 1010px) {
+    main .offer .offer-card {
+        margin: 20px 30px 10px 20px;
+    }
+}
+
+@media (max-width: 674px) {
+
+    main .welcome h1 {
+        font-size: 70px;
+    }
+}
+
+@media (max-width: 625px) {
+    header ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer .footer-menu ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: auto;
+    }
+
+    header .ham-menu {
+        display: block;
+        box-sizing: border-box;
+        padding: 15px 40px 12px 10px;
+        width: 20px
+    }
+
+
+    header .ham-menu i:hover {
+        color: #B5250A;
+    }
+
+    header ul {
+        display: none;
+    }
+}
+
+
+
+
+
 /* Newsletter CSS - Ryan */
 
 #h2-container {
