--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap');
+
+
 
 /* Aneta's CSS */
 /* Landing page style */
@@ -27,10 +30,13 @@ body, ul, h1, h2, h3, h4, h5, h6 {
     display: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Poppins', sans-serif !important;
+}
+
 * {
     font-family: 'Slabo 27px', serif;
 }
-
 
 ul {
     list-style: none;
